# julmie1994

./: README.md
OpenVisionStudio/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build_windows.bat  pyproject.toml
OpenVisionStudio/src/openvisionstudio/: __init__.py  __main__.py  app.py
OpenVisionStudio/src/openvisionstudio/engine/: cache.py  executor.py  export_python.py  graph_model.py  types.py
OpenVisionStudio/src/openvisionstudio/nodes/: base.py
OpenVisionStudio/src/openvisionstudio/nodes/builtin/: __init__.py  blur.py  canny.py  connected_components.py  contours.py  convert_color.py  draw_overlay.py  image_load.py  morphology.py  resize.py  save_image.py  threshold.py  video_capture.py
OpenVisionStudio/src/openvisionstudio/plugins/: __init__.py
OpenVisionStudio/src/openvisionstudio/resources/samples/projects/: basic_pipeline.ovs.json
OpenVisionStudio/src/openvisionstudio/ui/: console.py  inspector.py  main_window.py  node_canvas.py  node_library.py  preview.py
OpenVisionStudio/tests/: test_cache.py  test_executor.py
backend/: __init__.py  app.py  atc_response.py  llm_renderer.py  normalizer.py  parsers.py  state_machine.py  stt_audio.py  stt_handler.py  validator.py
frontend/: index.html  index1.html
ios/PhoneticTrainer/: Info.plist  PhoneticTrainerApp.swift
ios/PhoneticTrainer.xcodeproj/: project.pbxproj
ios/PhoneticTrainer/Models/: PhoneticEntry.swift
ios/PhoneticTrainer/Services/: GameEngine.swift  NoiseService.swift  SpeechService.swift
ios/PhoneticTrainerTests/: GameEngineTests.swift
(+2 files in other folders)
